fixed clipping issue

--- a/app/_assets/scss/partials/index/_twitter-feed.scss
+++ b/app/_assets/scss/partials/index/_twitter-feed.scss
@@ -16,13 +16,14 @@
         width: 64px;
         height: 64px;
         fill: #fff;
-    }    
+    }
     .ticker {
-        height: 120px;
-        overflow: hidden;    
+        height: 190px;
+        overflow: hidden;
     }
     .ticker li {
         height: 120px;
+        margin-bottom:150px;
     }
 }
 .tweets {
